<merge xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout android:id="@+id/LinearLayout02" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical"
        android:paddingTop="5dip" android:paddingLeft="4dip" android:paddingRight="4dip" android:paddingBottom="1dip" android:background="@android:drawable/bottom_bar" 
>
	<LinearLayout android:id="@+id/LinearLayout023" android:layout_width="fill_parent" android:layout_height="0dip" android:layout_weight="1" android:gravity="center">
		<Button android:text="@string/delete_action" android:id="@+id/delete" android:layout_width="0dip" android:layout_height="wrap_content" android:layout_weight="1"></Button>
		<Button android:text="@string/forward_action" android:id="@+id/forward" android:layout_width="0dip" android:layout_height="wrap_content" android:layout_weight="1"></Button>
	</LinearLayout>
	
	<!--  The buttons are move from message_compose.xml  -->
	<LinearLayout android:id="@+id/LinearLayout024" android:layout_width="fill_parent" android:layout_height="0dip" android:layout_weight="1" android:gravity="center">	
		<Button android:id="@+id/reply" android:text="@string/reply_action" android:layout_height="fill_parent" android:layout_width="0dip" android:layout_weight="1" />
		<Button android:id="@+id/reply_all" android:text="@string/reply_all_action" android:layout_height="fill_parent" android:layout_width="0dip" android:layout_weight="1" />
		<Button android:id="@+id/mark_as_unread" android:text="@string/mark_as_unread_action" android:layout_height="fill_parent" android:layout_width="0dip" android:layout_weight="1" />
	</LinearLayout>		
</LinearLayout>
</merge>
